--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -1,23 +1,26 @@
-<mvc:View controllerName="com.kpmg.controller.View1" xmlns:mvc="sap.ui.core.mvc" displayBlock="true" xmlns="sap.m">
-	<Shell>
-		<App>
+<mvc:View controllerName="kpmg.com.Exercise4BookStore.controller.View1" xmlns:mvc="sap.ui.core.mvc" displayBlock="true" xmlns="sap.m">
+	<Shell id="shell">
+		<App id="app">
 			<pages>
-				<Page title="{i18n>homePageTitle}">
+				<Page id="page" title="{i18n>title}">
 					<content>
-						<Panel headerText="{i18n>helloPanelTitle}" class="sapUiResponsiveMargin" width="auto">
-							<content>
-								<Button id="helloDialogButton" text="{i18n>openDialogButtonText}" press=".onOpenDialog" class="sapUiSmallMarginEnd" />
-
-								<Button text="{i18n>showHelloButtonText}" press=".onShowHello" class="myCustomButton" />
-								<Input value="{/recipient/name}" valueLiveUpdate="true" width="60%" />
-								<FormattedText htmlText="Hello {/recipient/name}" class="sapUiSmallMargin sapThemeHighlight-asColor myCustomText" />
-							</content>
-						</Panel>
-						<Panel headerText="{i18n>tablePanelTitle}" class="sapUiResponsiveMargin" width="auto">
-							<List headerText="Products" items="{ path: 'productsModel>/ProductCollection' }">
-								<StandardListItem title="{productsModel>Name}" description="{productsModel>Description}" counter="{productsModel>Quantity}" />
-							</List>
-						</Panel>
+						<VBox fitContainer="true">
+							<Table  inset="false" items="{ path: 'bookstoreModel>/AuthorsSet'}"
+								class="sapFDynamicPageAlignContent" width="auto">
+								<columns>
+									<Column width="12em">
+										<Text text="Authors"/>
+									</Column>
+								</columns>
+								<items>
+									<ColumnListItem type="Navigation" press=".onListItemPress">
+										<cells>
+											<ObjectIdentifier title="{bookstoreModel>Author}"/>
+										</cells>
+									</ColumnListItem>
+								</items>
+							</Table>
+						</VBox>
 					</content>
 				</Page>
 			</pages>
